[package]
name = "wgpu_tutorial"
version = "0.1.0"
authors = ["AndrewRademacher <andrewrademacher@icloud.com>"]
edition = "2018"

[dependencies]
image = "0.23.8"
winit = "0.22.2"
wgpu = "0.6.0"
futures = "0.3.5"
bytemuck = "1.3.1"
bytemuck_derive = "1.0.0-alpha.3"

[build-dependencies]
glob = "0.3.0"
shaderc = "0.6.2"
rayon = "1.3.1"
